# formula-yew

./: README.md  docker-compose.yaml
client/: .gitignore  Cargo.toml  Dockerfile  index.html
client/src/: components.rs  main.rs  models.rs  utils.rs
client/src/components/: chart.rs  charts.rs  detail.rs  header.rs  laps.rs  pitstops.rs  props.rs  races.rs  results.rs  seasons.rs  spinner.rs  standings.rs  table.rs
server/: Cargo.toml  Dockerfile
server/migrations/2024-01-05-215811_create_pitstops/: down.sql  up.sql
server/migrations/2024-01-06-045552_create_races/: down.sql  up.sql
server/migrations/2024-01-07-010925_create_drivers_and_constructors/: down.sql  up.sql
server/migrations/2024-01-07-031932_create_standings/: down.sql  up.sql
server/migrations/2024-01-07-215654_create_laptimes_and_pitstops/: down.sql  up.sql
server/migrations/2024-01-10-052402_create_results/: down.sql  up.sql
server/src/: color_pallet.rs  db.rs  handlers.rs  main.rs  models.rs  queries.rs
server/src/db/: connection.rs  db_models.rs  schema.rs
