[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["chrono"] }
gloo-net = "0.5.0"
log = "0.4.20"
plotly = { version = "0.8.4", features = ["wasm"] }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_urlencoded = "0.7.1"
wasm-bindgen-futures = "0.4.39"
wasm-logger = "0.2.0"
web-sys = "0.3.67"
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.0"
yew-router = "0.18.0"
