[package]
name = "docker_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
ergast_rust = "0.1.0"
http = "1.0.0"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing-subscriber = "0.3.18"
