[package]
name = "docker_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
bigdecimal = { version = "0.4.2", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "postgres_backend", "chrono", "numeric"] }
dotenvy = "0.15.7"
ergast_rust = "0.1.0"
http = "1.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing-subscriber = "0.3.18"
